Changed css to fix button to bottom of viewport and hide overflow

--- a/style.css
+++ b/style.css
@@ -13,12 +13,11 @@ html {
     background-color: black;
     color: white;
     gap: 1em;
+    overflow: hidden;
 }
 
 .body {
     display: flex;
-    height: 100vh;
-    width: 100vw;
     flex-flow: column;
     justify-content: space-around;
     align-content: space-around;
@@ -28,8 +27,9 @@ html {
 
 .mainbox {
     display: flex;
+    height: 100vh;
+    width: 100vw;
     flex-flow: column;
-    flex-wrap: wrap;
     justify-content: space-around;
     align-content: space-around;
     text-align: center;
@@ -65,9 +65,9 @@ html {
     
 }
 
-#rollButton {
-    display: ;
-    bottom: 0;
+#rollButton {  
+    /* bottom: 0; */
+    /* border: 2%; */
     justify-content: space-around;
     align-content: space-around;
     text-align: center;
